# Afterschool

./: .gitignore  Jenkinsfile  README.md  compose.yaml  nginx.conf  package-lock.json
backend/: .gitignore  (+7 more)
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/: CMakeLists.txt  package.xml  setup.py
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/behavior_trees/: coverage_bt.xml
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/launch/: gazebo_multi_nav2_world.launch.py
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/launch/__nav2_bringup_foxy/: bringup_launch.py
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/maps/: map.pgm  map.yaml
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/models/: modelreadme.md
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/models/CGMVanguard/: model.config
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/models/school_0910/: model.config
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/models/school_backbone/: model.config
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/params/: map_server_params.yaml  nav2_params_burger_cam.yaml  nav2_params_waffle.yaml  waypoints.yaml
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/scripts/: __coverage_planner_backup.py  cmd_vel_visualizer.py  coverage_planner.py  fsm.py  person_detector.py  person_tracker.py  trail_publisher.py
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/urdf/: turtlebot3_burger.urdf
robot/ros2_ws/src/coverage_planner/tb3_multi_robot/worlds/: school_base.world  school_final.world  sim_operate_readme  turtlebot3_school_bb.world
(+241 files in other folders)
